# The_Jungle_Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  echequier.c  echequier.h  echiquier.c  echiquier.h  main.c  multijoueur.c  multijoueur.h  verifications.c  verifications.h
cmake/: FindSDL2.cmake
graphic/: sdl_Implement.c  sdl_Implement.h
headers/: echiquier.h  exception.h  save.h  sqlite3.h  sqlite3ext.h
headers/database/: save.h
headers/tools/: utilities.h
ia/: model.c  model.h
multiplayer/: client.c  client.h  client1.c  client1.h  server.c  server.h  server1.c  server1.h
sources/: echiquier.c  save.c
sources/database/: save.c
sources/tools/: utilities.c
