CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)

#DEFINITIONS
SET(CMAKE_C_STANDARD 11)
SET(PROJECT_NAME JungleGame)
SET(DATA_FOLDER data)
SET(DATABASE_NAME save.dat)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

PROJECT(${PROJECT_NAME} C)


FILE(GLOB_RECURSE HEADERS_FILES
        ${PROJECT_SOURCE_DIR}/headers/*.h
        )
FILE(GLOB_RECURSE SOURCES_FILES
        ${PROJECT_SOURCE_DIR}/sources/*.c
        )

FILE(MAKE_DIRECTORY ${DATA_FOLDER})

FILE(TOUCH ${DATA_FOLDER}/${DATABASE_NAME})
MESSAGE("Database has been created")

INCLUDE_DIRECTORIES(headers)
INCLUDE_DIRECTORIES(${DATA_FOLDER})


ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.c ${SOURCES_FILES} ${HEADERS_FILES})







TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} -lws2_32)